# sheldon

./: Cargo.toml  README.md  RELEASES.md  flake.nix  sheldon.nix
.github/workflows/: build.yaml
completions/: sheldon.bash  sheldon.zsh
docs/: README_TEMPLATE.md
docs/src/: Configuration.md  Installation.md
src/cli/: mod.rs  raw.rs  tests.rs
src/cli/testdata/: raw_opt_init_help.golden  raw_opt_subcommand_required.golden
src/config/: edit.rs  file.rs  mod.rs  normalize.rs
src/context/: message.rs
src/lock/: mod.rs  plugin.rs  script.rs
src/util/: build.rs  mod.rs
tests/: lib.rs
tests/testdata/deprecated_get_filter/: plugins.toml
tests/testdata/directories_xdg_from_env/: plugins.toml
tests/testdata/github_bad_reinstall/: plugins.toml
tests/testdata/github_bad_url/: plugins.toml
tests/testdata/github_branch/: plugins.toml
tests/testdata/github_https/: plugins.toml
tests/testdata/github_submodule/: plugins.toml
tests/testdata/github_tag/: plugins.toml
tests/testdata/hooks/: plugins.toml
tests/testdata/inline/: plugins.toml
tests/testdata/profiles/: plugins.toml
